[gd_scene load_steps=10 format=3 uid="uid://bndcq0u53dtrh"]

[ext_resource type="Script" path="res://game/mecha/InventoryUI.gd" id="1_ayro0"]
[ext_resource type="PackedScene" uid="uid://driwwmdrnw183" path="res://game/mecha/CellUI.tscn" id="2_cecmr"]
[ext_resource type="PackedScene" uid="uid://d1rk7iwyjnc4g" path="res://game/mecha/ItemUI.tscn" id="3_cd421"]
[ext_resource type="Theme" uid="uid://butjorp5qm377" path="res://game/ui/HUDFont.tres" id="3_q84jc"]
[ext_resource type="Theme" uid="uid://d1jq50hkufdkk" path="res://game/customizer_buttons_theme.tres" id="4_74ebd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p06n0"]
content_margin_left = 5.0
content_margin_top = 5.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xoql5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lybm8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_veayo"]
bg_color = Color(0.277528, 0.277528, 0.277528, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.752582, 0.752582, 0.752582, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ayro0")
cell_scene = ExtResource("2_cecmr")
item_scene = ExtResource("3_cd421")

[node name="MainFrame" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Columns" type="HBoxContainer" parent="MainFrame"]
layout_mode = 2

[node name="EquipmentColumn" type="VBoxContainer" parent="MainFrame/Columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquipmentPanel" type="Panel" parent="MainFrame/Columns/EquipmentColumn"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryColumn" type="VBoxContainer" parent="MainFrame/Columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.21

[node name="InventoryPanel" type="Panel" parent="MainFrame/Columns/InventoryColumn"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="MainFrame/Columns/InventoryColumn/InventoryPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2
theme = ExtResource("3_q84jc")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_p06n0")
text = "Inventory"

[node name="GridFrame" type="Panel" parent="MainFrame/Columns/InventoryColumn/InventoryPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.06
anchor_right = 0.99
anchor_bottom = 0.993
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xoql5")

[node name="Scroll" type="ScrollContainer" parent="MainFrame/Columns/InventoryColumn/InventoryPanel/GridFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.42004
offset_bottom = 0.360046
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_74ebd")
theme_override_styles/panel = SubResource("StyleBoxEmpty_lybm8")
vertical_scroll_mode = 2

[node name="GridContent" type="Control" parent="MainFrame/Columns/InventoryColumn/InventoryPanel/GridFrame/Scroll"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="GridBorder" type="Panel" parent="MainFrame/Columns/InventoryColumn/InventoryPanel/GridFrame/Scroll/GridContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_veayo")

[node name="CellGrid" type="GridContainer" parent="MainFrame/Columns/InventoryColumn/InventoryPanel/GridFrame/Scroll/GridContent/GridBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 6

[node name="ItemsLayer" type="Control" parent="MainFrame/Columns/InventoryColumn/InventoryPanel/GridFrame/Scroll/GridContent/GridBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OtherInventoryColumn" type="VBoxContainer" parent="MainFrame/Columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryPanel" type="Panel" parent="MainFrame/Columns/OtherInventoryColumn"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Label" type="Label" parent="MainFrame/Columns/OtherInventoryColumn/InventoryPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2
theme = ExtResource("3_q84jc")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_p06n0")
text = "Inventory"

[node name="GridFrame" type="Panel" parent="MainFrame/Columns/OtherInventoryColumn/InventoryPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.06
anchor_right = 0.99
anchor_bottom = 0.993
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xoql5")

[node name="Scroll" type="ScrollContainer" parent="MainFrame/Columns/OtherInventoryColumn/InventoryPanel/GridFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.42004
offset_bottom = 0.360046
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_74ebd")
theme_override_styles/panel = SubResource("StyleBoxEmpty_lybm8")
vertical_scroll_mode = 2

[node name="GridContent" type="Control" parent="MainFrame/Columns/OtherInventoryColumn/InventoryPanel/GridFrame/Scroll"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="GridBorder" type="Panel" parent="MainFrame/Columns/OtherInventoryColumn/InventoryPanel/GridFrame/Scroll/GridContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_veayo")

[node name="CellGrid" type="GridContainer" parent="MainFrame/Columns/OtherInventoryColumn/InventoryPanel/GridFrame/Scroll/GridContent/GridBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 6

[node name="ItemsLayer" type="Control" parent="MainFrame/Columns/OtherInventoryColumn/InventoryPanel/GridFrame/Scroll/GridContent/GridBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DragLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
